--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -15,6 +15,12 @@
   justify-content: center;
   align-items:center;
 }
+.flex-center-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:center;
+}
 .flex-start {
   display: flex;
   justify-content: flex-start;
